# perf-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: collector.rs  macos.rs  main.rs  store.rs
src-tauri/zh-Hans.lproj/: InfoPlist.strings
